[gd_scene load_steps=10 format=3 uid="uid://dubqfll6wt3er"]

[ext_resource type="Script" path="res://entity.gd" id="1_t1ggi"]
[ext_resource type="Script" path="res://health/health_tracker.gd" id="2_phvhl"]
[ext_resource type="Texture2D" uid="uid://onhpoqcmxp7r" path="res://icon.svg" id="3_s2mat"]
[ext_resource type="Script" path="res://entities/state_machine/target_tracker.gd" id="4_fvfve"]
[ext_resource type="Script" path="res://entities/state_machine/state_machine.gd" id="5_tlqte"]
[ext_resource type="Script" path="res://entities/state_machine/find_target_state.gd" id="6_ctvdv"]
[ext_resource type="Script" path="res://entities/minions/track_target_state.gd" id="7_gae4f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bm50p"]
radius = 66.2722

[sub_resource type="CircleShape2D" id="CircleShape2D_v5ac1"]
radius = 4193.57

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 9
motion_mode = 1
script = ExtResource("1_t1ggi")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="HealthTracker" type="Node" parent="."]
script = ExtResource("2_phvhl")

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -101.0
offset_right = 56.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
max_value = 10.0

[node name="Minion" type="Sprite2D" parent="."]
texture = ExtResource("3_s2mat")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bm50p")

[node name="TargetTracker" type="Node" parent="."]
script = ExtResource("4_fvfve")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("5_tlqte")
states = {
"FindTarget": NodePath("FindTargetState"),
"TrackTarget": NodePath("TrackTargetState")
}
current_state = "FindTarget"

[node name="FindTargetState" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("target_tracker", "detection_area")]
script = ExtResource("6_ctvdv")
target_tracker = NodePath("../../TargetTracker")
detection_area = NodePath("Area2D")
detected_state = "TrackTarget"

[node name="Area2D" type="Area2D" parent="StateMachine/FindTargetState"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="StateMachine/FindTargetState/Area2D"]
shape = SubResource("CircleShape2D_v5ac1")

[node name="TrackTargetState" type="Node" parent="StateMachine" node_paths=PackedStringArray("target_tracker", "character_body", "nav_agent")]
script = ExtResource("7_gae4f")
target_tracker = NodePath("../../TargetTracker")
character_body = NodePath("../..")
move_speed = 100.0
nav_agent = NodePath("../../NavigationAgent2D")

[connection signal="health_changed" from="HealthTracker" to="ProgressBar" method="set_value"]
[connection signal="body_entered" from="StateMachine/FindTargetState/Area2D" to="StateMachine/FindTargetState" method="_on_body_enter_detection"]
